tests/ui/attributes/crate-name-macro-call.stderr
error[E0539]: expected a quoted string literal
  --> $DIR/crate-name-macro-call.rs:4:1
   |
LL | #![crate_name = concat!("my", "crate")]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0539`.
